# libsql_bindgen

./: Cargo.toml  README.md
abi/: Cargo.toml
abi/src/: lib.rs
bindgen/: Cargo.toml
bindgen/src/: lib.rs
bindgen_macros/: Cargo.toml
bindgen_macros/src/: lib.rs
examples/: Cargo.toml
examples/encrypt_decrypt/: .gitignore  Cargo.toml  README.md  get_sql.sh
examples/encrypt_decrypt/src/: lib.rs
examples/src/: concat.rs  concat3.rs  contains.rs  reverse_blob.rs
examples/wasmedge/: README.md
examples/wasmedge/get_exchange_rate/: Cargo.toml  README.md  gen_libsql_udf.sh
examples/wasmedge/get_exchange_rate/.cargo/: config.toml
examples/wasmedge/get_exchange_rate/src/: main.rs
examples/wasmedge/wasi_nn_udf/: Cargo.toml  README.md  gen_demo_sql.sh  gen_insert_image_sql.sh  gen_libsql_udf.sh
examples/wasmedge/wasi_nn_udf/src/: main.rs
function/: Cargo.toml
function/src/: lib.rs
src/: lib.rs
