[package]
name = "libsql_bindgen"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["webassembly", "libsql", "sqlite", "wasm", "udf"]
description = "Rust library for writing WebAssembly-powered user-defined functions for libSQL"
repository = "https://github.com/psarna/libsql_bindgen"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
libsql_wasm_abi = "0"

[lib]
proc-macro = true

[profile.release]
opt-level = 's'
lto = true

