[package]
name = "libsql_bindgen"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["webassembly", "libsql", "sqlite", "wasm", "udf"]
description = "Rust library for writing WebAssembly-powered user-defined functions for libSQL"
repository = "https://github.com/psarna/libsql_bindgen"
readme = "../README.md"

[dependencies]
libsql_bindgen_macros = { version = "0", path = "../bindgen_macros"}
