[package]
edition = "2021"
name = "examples"
publish = false
version = "0.0.0"

[dependencies]
libsql_bindgen = { path = "../bindgen" }

[[example]]
name = "concat"
path = "src/concat.rs"

[[example]]
name = "concat3"
path = "src/concat3.rs"


[[example]]
name = "contains"
path = "src/contains.rs"

[[example]]
name = "reverse_blob"
path = "src/reverse_blob.rs"
