[package]
name = "libsql_encrypt_decrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsql_bindgen = { version = "0", path = "../../bindgen" }
magic-crypt = "3.1"

[lib]
crate-type = ["cdylib"]
