[package]
name = "get_exchange_rate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_req_wasi = { version = "0.10", git = "https://github.com/second-state/http_req.git", branch = "rustls" }
libsql_bindgen = { version = "0", path = "../../../bindgen" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
