[package]
name = "wasi_nn_udf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsql_bindgen = { version = "0", path = "../../../bindgen" }
image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
] }
wasi-nn = { version = "0.2.1" }
